--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
+        <link rel="shortcut icon" href="img/faviccon.ico" type="image/x-icon" />
+
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
         <!-- Cookie banner -->
@@ -63,9 +65,7 @@
         <div class="container-fluid nav-bar sticky-top px-4 py-2 py-lg-0">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="display-6 text-dark">
-                        <i class="fas fa-swimmer text-primary me-3"></i>FinMaple
-                    </h1>
+                    <h1 class="display-6 text-dark">FinMaple</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button
@@ -288,21 +288,59 @@
                                 Comprehensive Financial Consultation
                             </h1>
                             <p class="mb-5">
-                                At the core of our services is a commitment to
-                                providing comprehensive financial consultations
-                                tailored to your unique needs. Our approach
-                                begins with a thorough understanding of your
-                                current financial situation, future goals, and
-                                risk tolerance. We conduct an in-depth analysis
-                                to identify opportunities and challenges,
-                                crafting a personalized strategy that aligns
-                                with your objectives. Our process is
-                                collaborative and transparent. We believe in
-                                open communication and involving you in every
-                                step of the journey. From initial assessment to
-                                implementation and ongoing monitoring, we ensure
-                                you are informed and confident in the decisions
-                                being made.
+                                At the heart of our financial consulting
+                                services lies a commitment to understanding and
+                                addressing the unique needs of each client. We
+                                believe that effective financial planning is not
+                                just about numbers; it’s about understanding
+                                your individual goals, values, and
+                                circumstances. Our approach is rooted in
+                                collaboration, transparency, and a thorough
+                                analysis of your financial landscape, ensuring
+                                that you receive personalized strategies
+                                designed to help you achieve long-term success.
+                                Our process begins with an in-depth consultation
+                                to gather information about your financial
+                                situation, aspirations, and challenges. This
+                                initial assessment allows us to build a detailed
+                                understanding of where you currently stand and
+                                where you aim to go. We take the time to listen
+                                to your concerns, discuss your financial
+                                objectives, and evaluate your risk tolerance.
+                                This foundational step is crucial in developing
+                                a strategy that is not only effective but also
+                                aligned with your personal and professional
+                                goals. Once we have a comprehensive
+                                understanding of your financial picture, we move
+                                on to creating a tailored plan. This plan
+                                encompasses various aspects of financial
+                                management, including investment strategies,
+                                retirement planning, tax optimization, and risk
+                                management. Our consultants leverage advanced
+                                financial tools and market insights to devise a
+                                strategy that is both realistic and achievable.
+                                We focus on creating a balanced approach that
+                                considers your immediate needs while also
+                                preparing you for future growth and stability.
+                                As your financial landscape evolves, we
+                                prioritize ongoing communication and support.
+                                Our team is committed to monitoring your
+                                progress and making adjustments as needed.
+                                Regular check-ins and performance reviews ensure
+                                that your financial plan remains aligned with
+                                your changing circumstances and market
+                                conditions. We understand that financial
+                                planning is a dynamic process, and we are here
+                                to guide you through every stage of your
+                                journey. Transparency is a core principle of our
+                                approach. We believe that informed clients are
+                                empowered clients. That’s why we ensure that you
+                                understand every aspect of your financial plan,
+                                the rationale behind our recommendations, and
+                                the potential risks and rewards associated with
+                                various strategies. We encourage open dialogue
+                                and are always available to address your
+                                questions or concerns.
                             </p>
                         </div>
                     </div>
