--- a/service.html
+++ b/service.html
@@ -36,6 +36,8 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
+        <link rel="shortcut icon" href="img/faviccon.ico" type="image/x-icon" />
+
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
         <!-- Cookie banner -->
@@ -63,9 +65,7 @@
         <div class="container-fluid nav-bar sticky-top px-4 py-2 py-lg-0">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="display-6 text-dark">
-                        <i class="fas fa-swimmer text-primary me-3"></i>FinMaple
-                    </h1>
+                    <h1 class="display-6 text-dark">FinMaple</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button
@@ -101,7 +101,7 @@
         <!-- Navbar & Hero End -->
 
         <!-- Header Start -->
-        <div class="container-fluid bg-breadcrumb">
+        <div class="container-fluid bg-breadcrumb bg2">
             <div class="container text-center py-5" style="max-width: 900px">
                 <h4
                     class="text-white display-4 mb-4 wow fadeInDown"
@@ -223,7 +223,7 @@
                         <div class="service-item p-4">
                             <div class="service-content">
                                 <div class="mb-4">
-                                    <i class="fas fa-utensils fa-4x"></i>
+                                    <i class="fas fa-solid fa-coins fa-4x"></i>
                                 </div>
                                 <a href="#" class="h4 d-inline-block mb-3">
                                     Investment Management</a
@@ -244,7 +244,9 @@
                         <div class="service-item p-4">
                             <div class="service-content">
                                 <div class="mb-4">
-                                    <i class="fas fa-door-closed fa-4x"></i>
+                                    <i
+                                        class="fas fa-solid fa-list-ul fa-4x"
+                                    ></i>
                                 </div>
                                 <a href="#" class="h4 d-inline-block mb-3">
                                     Retirement Strategy Development</a
@@ -265,7 +267,7 @@
                         <div class="service-item p-4">
                             <div class="service-content">
                                 <div class="mb-4">
-                                    <i class="fas fa-swimming-pool fa-4x"></i>
+                                    <i class="fas fa-solid fa-book fa-4x"></i>
                                 </div>
                                 <a href="#" class="h4 d-inline-block mb-3">
                                     Tax Strategy and Planning</a
@@ -286,7 +288,7 @@
                         <div class="service-item p-4">
                             <div class="service-content">
                                 <div class="mb-4">
-                                    <i class="fas fa-swimming-pool fa-4x"></i>
+                                    <i class="fas fa-solid fa-folder fa-4x"></i>
                                 </div>
                                 <a href="#" class="h4 d-inline-block mb-3">
                                     Estate Planning Services</a
@@ -307,7 +309,9 @@
                         <div class="service-item p-4">
                             <div class="service-content">
                                 <div class="mb-4">
-                                    <i class="fas fa-swimming-pool fa-4x"></i>
+                                    <i
+                                        class="fas fa-solid fa-layer-group fa-4x"
+                                    ></i>
                                 </div>
                                 <a href="#" class="h4 d-inline-block mb-3">
                                     Debt Management Solutions
