--- a/about.html
+++ b/about.html
@@ -36,6 +36,8 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
+        <link rel="shortcut icon" href="img/faviccon.ico" type="image/x-icon" />
+
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
 
@@ -64,9 +66,7 @@
         <div class="container-fluid nav-bar sticky-top px-4 py-2 py-lg-0">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="display-6 text-dark">
-                        <i class="fas fa-swimmer text-primary me-3"></i>FinMaple
-                    </h1>
+                    <h1 class="display-6 text-dark">FinMaple</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button
@@ -104,7 +104,7 @@
         <!-- Navbar & Hero End -->
 
         <!-- Header Start -->
-        <div class="container-fluid bg-breadcrumb">
+        <div class="container-fluid bg-breadcrumb bg1">
             <div class="container text-center py-5" style="max-width: 900px">
                 <h4
                     class="text-white display-4 mb-4 wow fadeInDown"
