--- a/thanks.html
+++ b/thanks.html
@@ -36,6 +36,8 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
+        <link rel="shortcut icon" href="img/faviccon.ico" type="image/x-icon" />
+
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
         <!-- Cookie banner -->
