--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -36,7 +36,7 @@
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-        <link rel="shortcut icon" href="img/faviccon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
