--- a/contact.html
+++ b/contact.html
@@ -284,6 +284,8 @@
                                     <div class="col-12">
                                         <button
                                             class="btn btn-primary w-100 py-3"
+                                            id="submit"
+                                            onclick="sendForm()"
                                         >
                                             Send Message
                                         </button>
