--- a/thanks.html
+++ b/thanks.html
@@ -40,6 +40,8 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
+        <link href="css/thanks.css" rel="stylesheet" />
+
         <!-- Cookie banner -->
         <link rel="stylesheet" href="cookie/on-cookies.css" />
         <script type="module" src="cookie/on-cookies.js" defer></script>
