--- a/index.html
+++ b/index.html
@@ -123,26 +123,26 @@
                                     <h4
                                         class="text-primary text-uppercase fw-bold mb-4"
                                     >
-                                        Welcome To WaterLand
+                                        Welcome To FinMaple
                                     </h4>
                                     <h1
                                         class="display-4 text-uppercase text-white mb-4"
                                     >
-                                        The Biggest Theme & Amusement Park
+                                        Empower Your Financial Future with
+                                        Expert Consulting
                                     </h1>
                                     <p class="mb-4 fs-5">
-                                        Lorem Ipsum is simply dummy text of the
-                                        printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard
-                                        dummy...
+                                        Unlock the full potential of your
+                                        finances with our tailored consulting
+                                        services. Whether you’re an individual
+                                        or a business, our team of experienced
+                                        professionals will guide you through
+                                        strategic planning, investment
+                                        management, and risk assessment to
+                                        achieve your financial goals. Let’s
+                                        build a sustainable financial future
+                                        together!
                                     </p>
-                                    <div class="d-flex flex-shrink-0">
-                                        <a
-                                            class="btn btn-primary rounded-pill text-white py-3 px-5"
-                                            href="#"
-                                            >Our Packages</a
-                                        >
-                                    </div>
                                 </div>
                             </div>
                         </div>
